syntax = "proto3";

import "intdemo/intdemo_models.proto";

package io.iohk.prism.intdemo.protos;

// This service simulates an application run by a government body who use atala's connector.
service IDService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
    rpc SetPersonalData (SetPersonalDataRequest) returns (SetPersonalDataResponse) {}
}

// This service simulates an application run by a university who use atala's connector.
service DegreeService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

// ... a company's application
service EmploymentService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse) {}
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

// ... another company's application
service InsuranceService {
    rpc GetConnectionToken (GetConnectionTokenRequest) returns (GetConnectionTokenResponse);
    rpc GetSubjectStatusStream (GetSubjectStatusRequest) returns (stream GetSubjectStatusResponse) {}
}

message GetSubjectStatusRequest {
    string connectionToken = 1;
}

message GetSubjectStatusResponse {
    SubjectStatus subjectStatus = 1;
}

message GetConnectionTokenRequest {
}

message GetConnectionTokenResponse {
    string connectionToken = 1;
}

message SetPersonalDataRequest {
    string connectionToken = 1;
    string firstName = 2;
    Date dateOfBirth = 3;
}

message SetPersonalDataResponse {}